RESOLVED FIXED206339
operationToObject() should check for a null errorMessage.
https://bugs.webkit.org/show_bug.cgi?id=206339
Summary operationToObject() should check for a null errorMessage.
Mark Lam
Reported 2020-01-15 23:31:01 PST
r224280 introduced operationToObject() with an option to specify a custom error message. r254252 added a scenario where the passed in error message is null but did not fix operationToObject() to allow for this. We should add the missing null check. <rdar://problem/58449666>
Attachments
proposed patch. (2.57 KB, patch)
2020-01-15 23:35 PST, Mark Lam
ysuzuki: review+
Mark Lam
Comment 1 2020-01-15 23:35:38 PST
Created attachment 387897 [details] proposed patch.
Yusuke Suzuki
Comment 2 2020-01-15 23:37:59 PST
Comment on attachment 387897 [details] proposed patch. r=me
Mark Lam
Comment 3 2020-01-16 09:26:55 PST
Thanks for the review. Landed in r254687: <http://trac.webkit.org/r254687>.
Note You need to log in before you can comment on or make changes to this bug.