operationToObject() should check for a null errorMessage. https://bugs.webkit.org/show_bug.cgi?id=206339 <rdar://problem/58449666>

Reviewed by Yusuke Suzuki.

JSTests:

* stress/operationToObject-should-check-for-null-errorMessage.js: Added.

Source/JavaScriptCore:

r224280 introduced operationToObject() with an option to specify a custom error
message.  r254252 added a scenario where the passed in error message is null but
did not update operationToObject() to allow for this.  This patch adds the
missing null check.

* dfg/DFGOperations.cpp:



Canonical link: https://commits.webkit.org/219437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254687 268f45cc-cd09-0410-ab3c-d52691b4dbfc